# VrokNext

./: .clang-format  Android.mk  Application.mk  CMakeLists.txt  README.md  TestEventCallback.java  alsa.cpp  alsa.h  audioout.cpp  audioout.h  audiotrack.cpp  audiotrack.h  bgpoint.cpp  bgpoint.h  buffer.cpp  buffer.h  bufferconfig.h  common.cpp  common.h  component.cpp  component.h  componentmanager.cpp  componentmanager.h  cuesheet.cpp  cuesheet.h  debug.cpp  debug.h  decoder.h  delaybuffer.h  disp.cpp  disp.h  disp.ui  driver.cpp  driver.h  effect.cpp  effect.h  eq.cpp  eq.h  extern-jni.cpp  extern-jni.h  (+54 more)
com/mx/vrok/: EventCallback.java  VrokServices.java
resampler/: fastmath.c  fastmath.h  resampler.c  resampler.h
shibatch/: equ.cpp  equ.h  ooura_fft.c  ooura_fft.h  paramlist.hpp
templates/: index.html
util/: ashmem.c  ashmem.h  fastmath.c  fastmath.h  mutil.c  mutil.h  sharedmem.c  sharedmem.h
